New language select component in header